test/fails/bad_tags/cmult1.lgl
tag a is vec2;

void main() {
    a x = [1., 2.];
    a bad = x .* x; // Component multiplication goes to the most general type
}